[package]
name = "curva"
version = "0.1.0"
description = "Kryva: parimutuel World Cup pools settled trustlessly via CPI into TxLINE's TxOracle validate_stat"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "curva"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
